--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,10 @@ spring.data.mongodb.uri=mongodb+srv://Admin:Admin123@personalcluster-ukeg8.gcp.m
 
 server.port=3000
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.gmail.io
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
-
+spring.mail.username=elasmaquiagem@gmail.com
+spring.mail.password=teste123maquiagem
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
+
