--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,12 @@ spring.data.mongodb.uri=mongodb+srv://Admin:Admin123@personalcluster-ukeg8.gcp.m
 
 server.port=3000
 
-spring.mail.host=smtp.gmail.io
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=elasmaquiagem@gmail.com
-spring.mail.password=teste123maquiagem
+spring.mail.username=dlecomp20@gmail.com
+spring.mail.password=Ecomper@123
 spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
-
